...
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_local_pizza_24" />

            <TextView
                android:id="@+id/topicName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eating &amp; noutrition"
                android:layout_marginLeft="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/topicIcon"
...
